--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@babel/preset-env": "^7.10.3",
     "apollo-server-express": "^2.15.0",
     "bcryptjs": "^2.4.3",
-    "cookie-session": "^1.4.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "http-status-codes": "^1.4.0",
     "mongoose": "^5.9.20",
     "nodemon": "^2.0.4",
