--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "apollo-server-express": "^2.15.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
