--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "start": "nodemon --exec babel-node src/index.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.3"
+    "@babel/core": "^7.10.4",
+    "@babel/node": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.10.4"
   },
   "dependencies": {
-    "@babel/node": "^7.10.3",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/preset-env": "^7.10.3",
-    "apollo-server-express": "^2.15.0",
+    "apollo-server-express": "^2.15.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
@@ -22,7 +22,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "http-status-codes": "^1.4.0",
-    "mongoose": "^5.9.20",
+    "mongoose": "^5.9.23",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
