--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@babel/preset-env": "^7.10.4"
   },
   "dependencies": {
+    "ajv": "^6.12.3",
+    "ajv-errors": "^1.0.1",
     "apollo-server-express": "^2.15.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -21,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "graphql": "^15.3.0",
     "http-status-codes": "^1.4.0",
     "mongoose": "^5.9.23",
     "nodemon": "^2.0.4",
