--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
+    "crypto-random-string": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
     "http-status-codes": "^1.4.0",
     "mongoose": "^5.9.23",
+    "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
