--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
     "http-status-codes": "^1.4.0",
+    "log4js": "^6.3.0",
     "mongoose": "^5.9.25",
     "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
-    "winston": "^3.3.3"
+    "passport-local": "^1.0.0"
   }
 }
