--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
+    "helmet": "^3.23.3",
     "http-status-codes": "^1.4.0",
     "log4js": "^6.3.0",
     "mongoose": "^5.9.25",
