--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@babel/core": "^7.11.0",
     "@babel/node": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.0"
+    "@babel/preset-env": "^7.11.0",
+    "eslint": "^7.6.0"
   },
   "dependencies": {
     "ajv": "^6.12.3",
